communication flow pt1

--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,4 @@ Friendship 4.0.odp
 metadata_analysis/plots/*
 !metadata_analysis/plots/mgs_time_date.png
 !metadata_analysis/plots/msg_length_year.png
+!metadata_analysis/plots/msg_flow.png
