--- a/.gitignore
+++ b/.gitignore
@@ -196,7 +196,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # Data
-data
+data/*
 !/data/correction_map_template.json
 
 # Presentation and plots
